[flake8]
max-line-length = 100
show-source = true
max-complexity = 15
statistics = true

[mypy]
show_column_numbers = true
show_error_context = false
warn_no_return = true
disallow_untyped_defs = true
check_untyped_defs = false
ignore_missing_imports = false

[mypy-observable]
ignore_missing_imports = True

[mypy-tests]
ignore_errors = true

[mypy-setup]
ignore_errors = true

[metadata]
license_file = LICENSE
