[metadata]
name = lookups
description = DCI lookups in Python (inspired by Netbeans Platform Lookups API)
long_description = file: README.md, AUTHORS.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Axel Voitier
author_email = axel.voitier@gmail.com
license = MPLv2
license_file = LICENSE
url = https://github.com/AxelVoitier/lookups
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Object Brokering
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3 :: Only
    # Py 3.9 EOL: 2025/10/05
    Programming Language :: Python :: 3.9
    # Py 3.10 EOL: 2026/10/04
    Programming Language :: Python :: 3.10
    # Py 3.11 EOL: 2027/10/03 ?
    Programming Language :: Python :: 3.11
    # Py 3.12 EOL: 2028/10/03 ?
    Programming Language :: Python :: 3.12
    # Py 3.13 EOL: 2029/10/03 ?
    Programming Language :: Python :: 3.13
    Typing :: Typed
keywords = lookup, lookups, dci

[options]
packages = find:
include_package_data = True
python_requires = ~=3.9
setup_requires =
    setuptools_scm
install_requires =
    observable
    typing_extensions
zip_safe = false  # Because mypy cannot analyse a zip

[options.packages.find]
exclude =
    tests

[options.package_data]
lookups =
    py.typed

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov
    pytest-html
    mypy
    check-manifest

[options.entry_points]
lookups.test_entry_point =
    parent = tests.tools:TestParentObject
    child = tests.tools:TestChildObject
    other = tests.tools:TestOtherObject
lookups.test_default_lookup =
    a_lookup = tests.test_lookup_default:DefaultLookup
lookups.test_default_lookup_lookup_provider =
    a_lookup = tests.test_lookup_default:DefaultLookupLookupProvider
lookups.test_default_lookup_provider =
    a_lookup = tests.test_lookup_default:DefaulLookupProvider
lookups.test_default_no_lookup =
    parent = tests.tools:TestParentObject
    child = tests.tools:TestChildObject
    other = tests.tools:TestOtherObject
lookups.test_default_empty_entry_point_group =

[flake8]
max-line-length = 100
show-source = true
max-complexity = 15
statistics = true

[mypy]
show_column_numbers = true
show_error_context = false
warn_no_return = true
disallow_untyped_defs = true
check_untyped_defs = false
ignore_missing_imports = false

[mypy-observable]
ignore_missing_imports = true

[mypy-tests]
ignore_errors = true

[mypy-setup]
ignore_errors = true
